--- a/style.css
+++ b/style.css
@@ -52,22 +52,20 @@ Author:
 .front-img {
 	width: 100%;
 }
-
-
-
-
 /* ここまでfrontページ用CSS */
 
 
-html {
-  height: 100%;
-}
 
 body {
   background-color: #f4f5f7;
   width: 100%;
   font-weight:bold;
 }
+
+#container {
+	width: 100%;
+}
+
 ol {
   list-style-type: none;
 }
@@ -78,7 +76,7 @@ ol {
   width: 100%;
 }
 
-.upper_line {
+.upper_lin {
   width: 68%;
   height: 1px;
   text-align: center;
@@ -852,57 +850,56 @@ ul {
 
 @media screen and (max-width: 1200px) {
 	
-  .page1_message_2_2{
-    font-size:3.5rem;
-  }
-  .page1_message_2_1 {
-  }
-
-  .page1_message_6{
-  }
-
-/*   .page2_message_3_image{
-    margin: 0 35%;
-  } */
-  .page2_message_3_abusolute{
-  }
-  .page2_message_3_abusolute:before {
-	  
-  }
-  .page2_message_4_abusolute {
-  }
+	.google_map {
+		width: 100%;
+	}
 	
+	.page1_message_image {
+     display:none;
+   }
 
+	.page1_message_2 {
+		margin: 0 0 1% 2%;
+	}	
+	
+	.page2_message_3_title_line {
+    margin: 10px auto;
+    width: 70%;
+   }
 
-  .page2_message_4_abusolute:before {
-  }
+	.page2_message_4 {
+		margin: 380px 0 200px 0;
+	}
   .page2_message_4_5{
     margin-top:450px;
   }
 	
-  .page2_message_4_image{
+  .page3_message_3_image{
+    left: 75%;
+    top: 320px;
   }
 	
-  .page3_message_3_image{
-    left: 65%;
+	.page3_message_3__ {
+		font-size: 3.5rem;
+	}
+	
+  .page6_message_image1 {
+    left: 7%;
   }
-/*   .page5_message_1_image_box{
-    margin: 0 30% 30px 30%;
-  } */
-  .page4_message_3{
+	
+  .page6_message_image2 {
+    left: 7%;
   }
-  .page6_message_image1{
-    left:16%;
+	
+  .page6_message_image3 {
+    left: 7%;
   }
-  .page6_message_image2{
-    left:16%;
+	
+  .page6_message_image4 {
+    left: 75%;
+    top: 1390px;
   }
-  .page6_message_image3{
-    left:16%;
-  }
-  .page6_message_image4{
-    left:70%;
-  }
+
 }
 
 
@@ -913,12 +910,426 @@ ul {
 
 
 @media screen and (max-width: 991px) {
+	
+	.image {
+	  width: 100%;
+	}
+	
+	.inline_img {
+		width: 20px;
+	}
+	
+	.iframe {
+     width: 100%;
+	}
+	
+	.google_map {
+		width: 100%;
+	}
+	
+	.page1_message_1 {
+    font-size: 1.2rem;
+    margin: 5%;
+}
+	
+	.page1_message_image {
+     display:none;
+   }
 
-  .page2_message_4_6{
-    margin: 3% 20%;
-	}  
+	.page1_message_image {
+		left: 64%;
+		top: 1200px;
+	}
+	
+   .page1_message_2 {
+    text-align: center;
+	 margin: 0 9% 1%;
+  }
+	
+	.page1_message_2_1 {
+    font-size: 3rem;
+    text-shadow: 3px 2px 3px #808080;
+    text-decoration: none;
+}
+	
+	.page1_message_2_2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+	
+	.page1_message_2_2_1 {
+    font-size: 1.5rem;
+  }
+	
+	.page1_message_4_title_1 {
+    font-size: 1.1rem;
+}
+	
+	.page1_message_4_title_li {
+    font-size: 1rem;
+}
+	
+	.page1_message_5 {
+    font-size: 1rem;
+	 left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    top: 300px;
+	 width: 90%;
+    text-align: center;
+	 padding: 20px 10px;
+}
+	
+	.page1_message_5:before {
+    left: 50%;
+	}
+	
+	.page1_message_6 {
+    font-size: 1.5rem;
+	 margin: 150px 5% 30px;
+}
+	
+	.page1_message_6_1 {
+    font-size: 1.6rem;
+}
+	
+	.page2_message_2 {
+    font-size: 1rem;
+	 margin-top: 250px;
+   }
+	
+	.page2_message_2_2 {
+    font-size: 1rem;
+  }
+	
+	.page2_message_2_4 {
+    font-size: 1rem;
+}
+	
+	.page2_message_2_5 {
+    font-size: 1rem;
+}
+	
+	 .page2_message_2_7 {
+	   font-size: 1rem;
+	}
+	
+	.page2_message_3_title {
+    font-size: 2rem;
 }
 
+	.page2_message_3_title_line {
+    margin: 10px auto;
+    width: 70%;
+}
+	
+	.page2_message_3 {
+		font-size: 1rem;
+	}
+	
+	.page2_message_3_1 {
+    margin: 3% 7%;
+    padding: 2% 3%;
+}
+	
+	
+	
+	.page2_message_3_image {
+		width: 80%;
+		margin: 50px auto;
+	}
+
+	.page2_message_3_abusolute {
+	   line-height: 1.3em;
+		top: 650px;
+		width: 90%;
+		font-size: 1rem;
+	}
+	
+	.page2_message_3_abusolute:before {
+    border-top-width: 15px;
+    border-bottom-width: 15px;
+    border-left-width: 15px;
+    border-right-width: 15px;
+    margin-left: -20px;
+}
+
+	.page2_message_3_abusolute_1 {
+		line-height: 1.3em;
+		font-size: 1.2rem;
+	}
+
+	.page2_message_4 {
+		margin: 150px 0 0 0;
+	}
+	
+	.page2_message_4_1_1 {
+	  font-size: 1rem;
+     transform: translateY(-10%);
+	  padding: 10px;
+	}
+
+	.page2_message_100 {
+	  margin: 350px 0 200px 0;
+	}
+
+	.page2_message_4_abusolute {
+		font-size: 1rem;
+		line-height: 1.5em;
+		top: 600px;
+	}
+	
+	  .page2_message_4_abusolute:before {
+    border-top-width: 15px;
+    border-bottom-width: 15px;
+    border-left-width: 15px;
+    border-right-width: 15px;
+    margin-left: -20px;
+  }
+	
+	ul {
+		margin-block-start: 0em;
+		margin-block-end: 0em;
+	}
+	
+	.point-title {
+    line-height: 25px;
+    transform: none;
+    font-size: 1rem;
+    padding: 10px 0 10px 30px;
+    background-size: 30px;
+}
+	
+.page2_message_4_2 {
+    font-size: 1rem;
+    margin: 80px 5% 0px;
+    line-height: 20px;
+}
+	.page2_message_4_5 {
+		margin: 3% 5%;
+		height: 50px;
+	}
+	
+	
+	.page3_message_title {
+    font-size: 1.5rem;
+}
+
+	.page3_message_3_image {
+		top: 225px;
+      left: 62%;
+	}
+
+	.page3_message_8{
+	  margin: 40px 0 30px 0;
+	  font-size: 1rem;
+	}
+
+	.page2_message_4_6 {
+	   margin: 8% 2% 4%;
+	}
+	
+	.page3_message_1 {
+    font-size: 1.2rem;
+  }
+
+	.page3_message_1_1 {
+    font-size: 1.2rem;
+  }
+	
+	.page3_message_2 {
+    font-size: 1.5rem;
+}
+	
+	.page3_message_2_1 {
+    font-size: 1rem;
+}
+	.page3_message_3_1_img {
+    width: 25px;
+}
+	
+	.page3_message_5 {
+		font-size: 1rem;
+	}
+
+	.page2_message_4_image {
+     width: 90%;
+	}
+	
+	.page2_message_4_iframe {
+    width: 90%;
+}
+
+	.page3_message_6 {
+		font-size: 1rem;
+	}
+	
+	.page3_message_6_title {
+    font-size: 1.2rem;
+}
+
+	.page3_message_title_sub {
+    margin: 30px 5%;
+    font-size: 1rem;
+	}
+
+	.page3_message_box {
+		margin: 50px 0 170px 0;
+	}
+	
+	.page3_message_2_ {
+    font-size: 1.2rem;
+}
+
+	.page3_message_3 {
+		font-size: 1rem;
+		margin: 20px 5% 30px 5%;
+	}
+	
+	.page3_message_3__ {
+     font-size: 1.2rem;
+   }
+
+	.page4_message_3 {
+		font-size: 1rem;
+		margin: 30px 0 100px 0;
+		padding: 40px 0 40px 3%;
+	}
+	
+	.page3_message_4 {
+    font-size: 1.2rem;
+	}
+	
+	.page3_message_9 {
+    font-size: 1rem;
+}
+
+	.page3_message_title {
+		padding: 30px 0 20px;
+	}
+	
+	.page4_message_1_age {
+    font-size: 1.2rem;
+}
+	
+	.page4_message_1 {
+    font-size: 1.2rem;
+    margin: 20px 5%;
+}
+	
+	.page4_message_2 {
+    font-size: 1rem;
+}
+	
+	.page5_message_1_image_box {
+    width: 80%;
+	}
+	
+	.page5_message_1_image_text {
+    font-size: 1.2rem;
+	margin-top: 25px;
+}
+	
+	.page6_message_1 {
+    font-size: 1rem;
+    margin: 60px 20px 50px 80px;
+}
+	
+	.page6_message_1_end {
+    font-size: 1rem;
+    margin: 20px;
+}
+	
+	.page6_message_image1 {
+    left: 75px;
+	 top: 290px;
+}
+	
+		.page6_message_image2 {
+    left: 75px;
+		top: 480px;
+}
+
+  .page6_message_image3 {
+    left: 75px;
+    top: 660px;
+   }
+
+	.page6_message_image4 {
+		 top: 1100px;
+		left: 61%;
+	}
+	
+	
+	.allow_icon {
+		width: 30px;
+	}
+
+	.No {
+    font-size: 1.2rem;
+}
+	
+	.infomation_image {
+    font-size: 1rem;
+}
+	
+	.info_image {
+	  width: 100%;
+	}
+	
+	.infomation_map {
+	  margin: 20px 0 100px;
+	}
+	
+	.infomation_line {
+    width: 80%;
+    margin: 0 auto;
+}
+	
+	.infomation {
+    font-size: 2rem;
+}
+	
+	.infomation_message {
+    font-size: 1rem;
+  }
+	
+	.infomation_message_text {
+    font-size: 1rem;
+  }
+
+	footer{
+	  margin: 20px 7%;
+		font-size: 1rem;
+	}
+	
+	.footer-text{
+		padding-left: 10%;
+	}
+	
+	#under-fix {
+    font-size: 1rem;
+   }
+	
+	.fix1 {
+    background-position: 15px center;
+    background-size: 25px;
+  }
+	
+	.fix1 a {
+    padding: 25px 0 0px 35%;
+   }
+	
+	.fix2 {
+    background-position: 15px center;
+    background-size: 30px;
+   }
+	
+	.fix2 a {
+    padding: 25px 0 0px 35%;
+   }
+}
 
 
 
@@ -964,7 +1375,6 @@ ul {
 	}
 	
    .page1_message_2 {
-    text-align: center;
     float: none;
 	 margin-bottom: 50px;
   }
@@ -973,7 +1383,8 @@ ul {
     font-size: 3rem;
     text-shadow: 3px 2px 3px #808080;
     text-decoration: none;
-	padding-left: 35%;
+	 display: block;
+    text-align: center;
 }
 	
 	.page1_message_2_2 {
@@ -1252,6 +1663,7 @@ top: 380px;;
 	}
 	
 	.page5_message_1_image_text {
+	 margin-top: 20px;
     font-size: 1.2rem;
 }
 	
@@ -1276,11 +1688,13 @@ top: 380px;;
 	
 		.page6_message_image3 {
     left: 30px;
+	top: 720px;
 }
 
 	.page6_message_image4 {
-		 top: 1220px;
-	}
+		top: 1220px;
+		left: 70%;
+	}left: 70%;
 	
 	
 	.allow_icon {
